--- a/C_ukol.ipynb
+++ b/C_ukol.ipynb
@@ -145,50 +145,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     vek_mother vek_embryo genetic_method  f_donor examined_genes  sex  \\\n",
-      "3            32         28   Karyomapping      NaN           TGM1   XX   \n",
-      "7            29         29            NaN      NaN            NaN  NaN   \n",
-      "8            26         24          PGT-A      NaN            NaN   XY   \n",
-      "9            28         27            NaN      NaN            NaN  NaN   \n",
-      "16           26         25          PGT-A      NaN            NaN   XX   \n",
-      "...         ...        ...            ...      ...            ...  ...   \n",
-      "972          31         29          PGT-A      NaN            NaN   XY   \n",
-      "993          28         27          PGT-A      NaN            NaN   XX   \n",
-      "996          28         27          PGT-A      NaN            NaN   XX   \n",
-      "1002         29         27          PGT-A      NaN            NaN   XY   \n",
-      "1003         29         28          PGT-A      NaN            NaN   XX   \n",
-      "\n",
-      "      clinical_gravidity  \n",
-      "3                    1.0  \n",
-      "7                    0.0  \n",
-      "8                    1.0  \n",
-      "9                    0.0  \n",
-      "16                   0.0  \n",
-      "...                  ...  \n",
-      "972                  1.0  \n",
-      "993                  1.0  \n",
-      "996                  1.0  \n",
-      "1002                 0.0  \n",
-      "1003                 1.0  \n",
-      "\n",
-      "[218 rows x 7 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "##rozdělení vek_embryo do 5 kategorií\n",
+    "# rozdělení vek_embryo do 5 kategorií\n",
     "vek_embryo_1 = e_transfers[e_transfers[\"vek_embryo\"] <= \"29\"]\n",
     "vek_embryo_2 = e_transfers[(e_transfers[\"vek_embryo\"] >= \"30\") & (e_transfers[\"vek_embryo\"] <= \"34\")]\n",
     "vek_embryo_3 = e_transfers[(e_transfers[\"vek_embryo\"] >= \"35\") & (e_transfers[\"vek_embryo\"] <= \"39\")]\n",
     "vek_embryo_4 = e_transfers[e_transfers[\"vek_embryo\"] >= \"40\"]\n",
-    "vek_embryo_all = e_transfers[\"vek_embryo\"]\n",
-    "\n",
-    "print(vek_embryo_1)"
+    "vek_embryo_all = e_transfers[\"vek_embryo\"]\n"
    ]
   },
   {
@@ -208,31 +172,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "51.34\n",
-      "54.59\n",
-      "51.54\n",
-      "47.89\n",
-      "50.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(e_success_all)\n",
-    "print(e_success_1)\n",
-    "print(e_success_2)\n",
-    "print(e_success_3)\n",
-    "print(e_success_4)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +220,7 @@
        "0                     51.34  54.59  51.54  47.89       50.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
