--- a/D_ukol.ipynb
+++ b/D_ukol.ipynb
@@ -9,232 +9,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>vek_mother</th>\n",
-       "      <th>vek_embryo</th>\n",
-       "      <th>genetic_method</th>\n",
-       "      <th>f_donor</th>\n",
-       "      <th>examined_genes</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>clinical_gravidity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>PGT-A</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>XX</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>33</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PGT-A</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>XY</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>30</td>\n",
-       "      <td>30</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>32</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Karyomapping</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>TGM1</td>\n",
-       "      <td>XX</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>32</td>\n",
-       "      <td>31</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1007</th>\n",
-       "      <td>38</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PGT-A</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>XY</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1008</th>\n",
-       "      <td>46</td>\n",
-       "      <td>45</td>\n",
-       "      <td>PGT-A</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>XY</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1009</th>\n",
-       "      <td>35</td>\n",
-       "      <td>34</td>\n",
-       "      <td>Karyomapping</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>AR</td>\n",
-       "      <td>XY</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1010</th>\n",
-       "      <td>31</td>\n",
-       "      <td>30</td>\n",
-       "      <td>PGT-A</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>XY</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1011</th>\n",
-       "      <td>33</td>\n",
-       "      <td>30</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1012 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     vek_mother vek_embryo genetic_method  f_donor examined_genes  sex  \\\n",
-       "0            31         31          PGT-A      NaN            NaN   XX   \n",
-       "1            33        NaN          PGT-A      1.0            NaN   XY   \n",
-       "2            30         30            NaN      NaN            NaN  NaN   \n",
-       "3            32         28   Karyomapping      NaN           TGM1   XX   \n",
-       "4            32         31            NaN      NaN            NaN  NaN   \n",
-       "...         ...        ...            ...      ...            ...  ...   \n",
-       "1007         38        NaN          PGT-A      1.0            NaN   XY   \n",
-       "1008         46         45          PGT-A      NaN            NaN   XY   \n",
-       "1009         35         34   Karyomapping      NaN             AR   XY   \n",
-       "1010         31         30          PGT-A      NaN            NaN   XY   \n",
-       "1011         33         30            NaN      NaN            NaN  NaN   \n",
-       "\n",
-       "      clinical_gravidity  \n",
-       "0                    0.0  \n",
-       "1                    0.0  \n",
-       "2                    1.0  \n",
-       "3                    1.0  \n",
-       "4                    0.0  \n",
-       "...                  ...  \n",
-       "1007                 0.0  \n",
-       "1008                 0.0  \n",
-       "1009                 0.0  \n",
-       "1010                 1.0  \n",
-       "1011                 1.0  \n",
-       "\n",
-       "[1012 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "transfery = pd.read_csv(\"transfery.csv\")\n",
-    "transfery\n"
+    "transfery = pd.read_csv(\"transfery.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transfery[\"genetic_method\"]== \"PGT-A\".count(\"PGT_A\")\n",
-    "pocet_genetic_methods = transfery.groupby(\"genetic_method\").size()\n",
-    "df_genetic_methods = pd.DataFrame(pocet_genetic_methods)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "162"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "transfery[\"genetic_method\"].isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -315,18 +101,21 @@
        "VeriSeq          41"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "transfery[\"genetic_method\"]== \"PGT-A\".count(\"PGT_A\")\n",
+    "pocet_genetic_methods = transfery.groupby(\"genetic_method\").size()\n",
+    "df_genetic_methods = pd.DataFrame(pocet_genetic_methods)\n",
     "df_genetic_methods"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +188,7 @@
        "5               ostatni     52"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +200,7 @@
     "}\n",
     "\n",
     "df_genetic_method = pd.DataFrame(data_genetic_method)\n",
-    "df_genetic_method\n"
+    "df_genetic_method"
    ]
   },
   {
@@ -473,6 +262,7 @@
     }
    ],
    "source": [
+    "# zobrazení tabulky\n",
     "data_g = {\n",
     "    'PGT-A': [697],\n",
     "    'PGT-STR': [15],\n",
@@ -488,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -503,24 +293,18 @@
     }
    ],
    "source": [
-    "#zobrazení grafu\n",
+    "# zobrazení grafu\n",
     "data_genetic_method = {\n",
     "    'Metoda': ['PGT-A', 'PGT-STR', 'Karyomapping', 'OneGene', 'bez genetické metody', 'ostatni'],\n",
     "    'Pocet': [697, 15, 66, 20, 162, 52]\n",
     "}\n",
     "\n",
-    "# Vytvoření DataFrame\n",
     "df = pd.DataFrame(data_genetic_method)\n",
     "\n",
-    "# Vytvoření sloupcového grafu\n",
     "plt.bar(df['Metoda'], df['Pocet'], color='#006600')\n",
-    "\n",
-    "# Přidání popisků os a názvu grafu\n",
-    "\n",
     "plt.ylabel('Počet transferů', fontsize = 10)\n",
     "plt.title('Počet provedených transferů dle genetických metod', fontsize = 10)\n",
     "plt.xticks(fontsize=6) \n",
-    "# Zobrazení grafu\n",
     "plt.show()\n"
    ]
   }
