--- a/E_ukol.ipynb
+++ b/E_ukol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,17 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
     "import statsmodels.formula.api as smf\n",
-    "transfery = pd.read_csv(\"transfery.csv\")\n"
+    "\n",
+    "transfery = pd.read_csv(\"transfery.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#očištění od NULL hodnot ve sloupci sex a clinical_gravidity\n",
+    "# očištění od NULL hodnot ve sloupci sex a clinical_gravidity\n",
     "transfery.dropna(subset=[\"sex\"], inplace=True)\n",
     "transfery.dropna(subset=[\"clinical_gravidity\"],inplace=True)\n",
     "transfery.drop(transfery[transfery['sex'] == \"--\"].index, inplace=True)"
@@ -28,91 +29,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>vek_mother</th>\n",
-       "      <th>vek_embryo</th>\n",
-       "      <th>genetic_method</th>\n",
-       "      <th>f_donor</th>\n",
-       "      <th>examined_genes</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>clinical_gravidity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [vek_mother, vek_embryo, genetic_method, f_donor, examined_genes, sex, clinical_gravidity]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#kontrola přítomnosti NULL hodnot\n",
-    "transfery[transfery[\"sex\"].isnull()]\n",
-    "transfery[transfery[\"clinical_gravidity\"].isnull()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sex\n",
-       "XY    434\n",
-       "XX    389\n",
+       "clinical_gravidity\n",
+       "False    823\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transfery[\"sex\"].value_counts()"
+    "# kontrola přítomnosti NULL hodnot\n",
+    "transfery[\"sex\"].isnull().value_counts\n",
+    "transfery[\"clinical_gravidity\"].isnull().value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#určení proměnných\n",
+    "# určení proměnných\n",
     "sex_XX = transfery[\"sex\"] == \"XX\"\n",
     "sex_XY = transfery[\"sex\"] == \"XY\"\n",
     "is_successfull = transfery[\"clinical_gravidity\"] == \"1.0\"\n"
@@ -120,18 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#výpočet úspěšnosti transferu dle pohlaví\n",
+    "# výpočet úspěšnosti transferu dle pohlaví\n",
     "succesfull_XX = ((sex_XX).sum() / (is_successfull.count()) * 100).round(2)\n",
     "succesfull_XY = ((sex_XY).sum() / (is_successfull.count()) * 100).round(2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -205,23 +150,20 @@
        "XY                  214  220"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#test závislosti kategoriálních hodnot\n",
+    "# test závislosti kategoriálních hodnot\n",
     "contigency_table = pd.crosstab(transfery[\"sex\"], transfery[\"clinical_gravidity\"])\n",
-    "contigency_table\n",
-    "\n",
-    "#Výsledek\" úspěšnost transferu nezávisí na pohlaví\n",
-    "#hladina významnosti je vyšší než 0.05."
+    "contigency_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -231,13 +173,15 @@
        "       [211.46294046, 222.53705954]]))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stats.chi2_contingency(contigency_table)"
+    "stats.chi2_contingency(contigency_table)\n",
+    "# hladina významnosti je vyšší než 0.05.\n",
+    "# výsledek úspěšnost transferu není statisticky závislý na pohlaví."
    ]
   }
  ],
