--- a/AB_ukol.ipynb
+++ b/AB_ukol.ipynb
@@ -306,14 +306,9 @@
     "    'Pocet': [success_all, success_1, success_2, success_3, success_4]\n",
     "}\n",
     "\n",
-    "# Vytvoření DataFrame\n",
     "df = pd.DataFrame(data_graf)\n",
     "\n",
-    "# Vytvoření sloupcového grafu\n",
     "plt.bar(df['Věková kategorie'], df['Pocet'], color='#006600')\n",
-    "\n",
-    "# Přidání popisků os a názvu grafu\n",
-    "\n",
     "plt.ylabel('Procento úspěšnosti', fontsize = 10)\n",
     "plt.title('Úspěšnost transferu dle věku matky', fontsize = 10)\n",
     "plt.xticks(fontsize=6) \n",
@@ -323,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -346,13 +341,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Výsledek: hladina významnosti je menší než 0,05.\n",
-    "# Věk matky a úspěšnost transferu jsou na sobě statisticky závislé."
+    "Hladina významnosti je menší než 0,05. Dle tohoto testu vychází, že \n",
+    "věk matky a úspěšnost transferu jsou na sobě statisticky závislé."
    ]
   }
  ],
