--- a/C_ukol.ipynb
+++ b/C_ukol.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,10 +260,15 @@
     "kendall = stats.kendalltau(e_transfers[\"vek_embryo\"], e_transfers[\"clinical_gravidity\"])\n",
     "\n",
     "print(f\"Spearman: {spearman.correlation: .2f}, p-value: {spearman.pvalue}\")\n",
-    "print(f\"Kendall's Tau: {kendall.correlation: .2f}, p-value: {kendall.pvalue}\")\n",
-    "\n",
-    "# Tady se mi nepovedlo dobrat výsledku. \n",
-    "# Dle hodnot z tabulky budou pravděpodobně věk embrya a úspěšnost transferu na sobě statisticky nezávislé."
+    "print(f\"Kendall's Tau: {kendall.correlation: .2f}, p-value: {kendall.pvalue}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zde se mi nepodařilo vypsat výsledek. Dle hodnot z tabulky budou pravděpodobně\n",
+    "věk embrya a úspěšnost transferu na sobě statisticky nezávislé."
    ]
   }
  ],
